// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toIncludeAllMembers fails when array values matches the members of the set 1`] = `
"expect(received).not.toIncludeAllMembers(expected)

Expected list to not have all of the following members:
  [2, 1, 3]
Received:
  [1, 2, 3]"
`;

exports[`.toIncludeAllMembers fails when array values do not contain any of the members of the set 1`] = `
"expect(received).toIncludeAllMembers(expected)

Expected list to have all of the following members:
  [1, 2, 3]
Received:
  [4, 5, 6]"
`;

exports[`.toIncludeAllMembers fails when expected object is not an array 1`] = `
"expect(received).toIncludeAllMembers(expected)

Expected list to have all of the following members:
  2
Received:
  [1, 2, 3]"
`;

exports[`.toIncludeAllMembers fails when given object is not an array 1`] = `
"expect(received).toIncludeAllMembers(expected)

Expected list to have all of the following members:
  [1, 2, 3]
Received:
  2"
`;
